Fix validation gap and correct stale docs
- Add @NotBlank/@Positive constraints to CreateBookRequest so @Valid on
  the create endpoint actually rejects malformed input with a 400,
  instead of letting it reach Hibernate's flush-time validation and
  surface as an unhandled 500.
- Remove BookRepository.findByAuthorIgnoreCase, an unused derived query.
- Correct README/AGENTS.md: the toolchain is Java 26 with preview
  features enabled (not Java 25), and CatalogLookupClient defaults to
  the in-app stub controller, not jsonplaceholder.typicode.com.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>